<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ask_for_leave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    tools:context="com.example.signincouse.ui.AskForLeaveActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ask_for_leave"
        android:textColor="#ffffff"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/leave_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="top"
        android:hint="@string/no_more_than_60"
        android:inputType="textImeMultiLine"
        android:maxLength="60"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/for_leave_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/send"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>
