<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    tools:context=".ui.FragmentNotice">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/content"
        android:textColor="#ffffff"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:maxLines="3" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/send"/>


</LinearLayout>
