<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    tools:context=".ui.FragmentMe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_img_nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/login_default" />

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/primary_white"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/ll_img_nickname"
            android:src="@color/divider_9691A2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_mydata_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_mydata_icon"
                    android:text="@string/my_data"
                    android:textColor="@color/primary_white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/right" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/ll_img_nickname"
                android:src="@color/divider_9691A2" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/iv_myaccount_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_myaccount_icon"
                    android:text="@string/my_account"
                    android:textColor="@color/primary_white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/right" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/iv_mysetting_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_mysetting_icon"
                    android:text="@string/my_setting"
                    android:textColor="@color/primary_white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/right" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_version_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_version_icon"
                    android:text="@string/version"
                    android:textColor="@color/primary_white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/right" />
            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/ll_img_nickname"
                android:src="@color/divider_9691A2" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tuiChu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tuichu_button"
        android:text="@string/tuiChu" />
</LinearLayout>
